ImageCrop's polygon tests written in both image and WCS modes
The polygon mode was tested in the WCS mode and some corrections
needed to be made for the steps I wrote last night. It now works very
nicely both in image mode and WCS mode.

Two tests were also added to accompany this new feature.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2015-06-25  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/imgcrop/wcsmode.c (wcscheckprepare): Check for both axises
+	having the same pixel scale now incorporates floating point
+	errors.
+
+	* src/imgcrop/crop.c (imgpolygonflpixel): Now gets the vertices
+	and their number instead of the cropparams structure. This was
+	done to make it be more general and use it in both Image mode and
+	WCS mode.
+	(onecrop): Allocation of the crp->ipolygon array was moved to the
+	cropflpixel function.
+
 2015-06-13  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* lib/fitsarrayvv.c (fileorextname): New name for the setmaskname
