MakeCatalog handels blank labeled pixels
Until now, MakeCatalog was not prepared to handle blank pixels in the
labeled images. But now, the labeled pixels are easily ignored.

I also added the names of the input files in the catalogs and also a
column specifying the 5 sigma magnitude in the input image.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-07-02  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/mkcatalog/mkcatalog.c (firstpass): Now accounts for blank
+	labeled pixels.
+	(setcpscorr): Now finds both the minimum and maximum of the STD,
+	maximum for finding the 5sigma magnitude.
+
+	* src/mkcatalog/main.h (CATUNITMAG): Changed unit for magnitudes.
+
 2015-06-26  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/noisechisel/thresh.c (qthreshonmesh): Only sort and find the
