Corrected `Brightness' and `flux'
Throughout Gnuastro, until now, I had used flux and brightness
interchangeably while this is only true for one pixel. So for example
using terms like "total flux" for the sum of pixels is wrong. I have
explained everything completely in the "Flux Brightness and magnitude"
subsection of the manual. All the programs (mainly variable names and
option explanations) and the manual were corrected to make the proper
distinction between these two terms.

Also the other MathJax scripts that might be necessary for the HTML
webpages to be run with LibreJS were also added. However, LibreJS
still doesn't recognize the scripts. I have asked
help-librejs@gnu.org.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2015-07-05  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/mkcatalog/columns.c (brightnessfluxmag): Previously
+	fluxmag. Now this function gives the brightness, flux and
+	magnitude depending on its input parameters.
+
+	* src/mkcatalog/args.h (options): Corrected all usage of "flux"
+	and "brightness".
+
+	* doc/gnuastro.texi: Corrected all usage of "flux" and
+	"brightness".
+
+	* doc/forwebpage.sh (thismonth): Removed type=\"text/javascript\""
+	from the string since it seemed to be interfering with LibreJS.
+
 2015-07-03  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* lib/fitsarrayvv.c (readkeywords): Now reads multiple keywords.
