NoiseChisel bug fixed by 8 connected labeling
Until now, in labeling the dilated image, I used 4-connected
components. However, in the segmentation step, the 8-connected
neighbors of each river pixel are checked. When the rivers of the
edges of the detections are checked, these two different neighbor
definitions would cause a problem: two separate 4-connected regions
can be 8-connected.

The fix of this bug was a simple change of `4' to `8' in the main
NoiseChisel function. However it took me several (very frustrating)
hours to find it! While Valgrind's messages are usually very useful,
in this case (because they resulted from my own convention), they
caused even more confusion. The valgrind error said something like
this: "You are trying to reference an internal array of another
function that was allocated and freed in another funciton". In short
the array it was complaining about didn't exist when the function
giving the error was called!!! This really confused me! I finally
found it through individual checks of all the detections without using
Valgrind.

In the meantime, I also removed all the checks for NaN (masked) pixels
in oversegment (clumps.c). Since NaN pixels are no longer in the
indexs that are fed to this function.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+2015-07-06  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/noisechisel/noisechisel.c (noisechisel): After dilation, 4
+	connectivity was used to find the labels of the connected
+	components. However, when we are looking around the river pixels
+	in the segmentation process, we are looking in their 8-connected
+	neighbors. So when two 4-connected labeled regions are separate,
+	they can still be 8-connected and this will mess up the river flux
+	association functions where the flux of a river is given to the
+	clump that is touching it. It took me several frustrating hours to
+	find this very simple bug!
+
+	* src/noisechisel/clumps.c (oversegment): NaN (masked) pixels are
+	no longer fed into this function. So the conditions to check for
+	them, especially in setting the top index are removed.
+	(getclumpinfo): Now uses a different number for the sum of flux
+	when trying to find the flux weighted center of the clump. This
+	sum is made of only positive values. Negative values cannot act as
+	weights and will mess up the center calculations. The new number
+	for each column is stored in a third column to the xys
+	array. Also, the xys array is no longer needed outside this
+	function.
+
 2015-07-05  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/mkcatalog/columns.c (brightnessfluxmag): Previously
