Corrected numblank to anyblank
In the fitsarrayvv.c functions, I had mistakenly used a variable
called `numblank'. Some time in the past, this variable probably
actually did mean the number of blanks. But now it was only a boolean
value specifying if there are any blanks in the input or not. So I
renamed all wrong occurances of `numblank' (as relates to the input
image and FITS blank pixels) to `anyblank' which correctly represents
what this variable holds.

Note that NoiseChisel's segmentation does make use of a similarly
termed variable for the number of pixels left to grow. That is a
different usage and those variable names were left unchanged.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2015-07-07  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* lib/fitsarrayvv.c: The numblank variable did not actually store
+	the `number' of blank pixels, it was only a 0 or 1 value to
+	specify if there are any blank pixels or not. It is now changed to
+	`anyblank' to be more clear and not confuse the readers. All the
+	Gnuastro programs that used this variable, were also corrected.
+
 2015-07-06  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/noisechisel/noisechisel.c (noisechisel): After dilation, 4
