--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -9316,27 +9316,31 @@ Astronomical data pixels are usually in units of
 counts@footnote{Counts are also known as analog to ditigal units
 (ADU).} or electrons or either one divided by seconds. To convert from
 the counts to electrons, you will need to know the instrument gain. In
-any case, they can be directly converted to energy or energy/sec using
-the basic hardware (telescope, camera and filter) information. We will
-contiue the discussion assuming the pixels are in units of energy/sec,
-but everything discussed here equally holds for energy.
+any case, they can be directly converted to energy or energy/time
+using the basic hardware (telescope, camera and filter)
+information. We will continue the discussion assuming the pixels are
+in units of energy/time.
 
 @cindex Flux
 @cindex Luminosity
 @cindex Brightness
 The @emph{brightness} of an object is defined as its total detected
-energy which is the sum of the pixels that are associated with it by
-our detection tool for example @ref{NoiseChisel}. The @emph{flux} of
-an object is defined as its brightness divided by its detected area
-(for example in @mymath{cm^2} on the detector). Knowing the flux
-(@mymath{f}) and distance to the object (@mymath{r}), we can calculate
-its @emph{luminosity}: @mymath{L=4{\pi}r^2f}. Therefore, flux and
-luminosity are intrinsic properties of the object, while brightness
-depends on our detecting tools (hardware and software). Here we will
-not be discussing luminosity, but brightness. However, since
-luminosity is the astrophysically interesting quantity, we also
-defined it here to avoid possible confusion between these two terms
-because they both have the same units.
+energy per time. This is simply the sum of the pixels that are
+associated with that detection by our detection tool for example
+@ref{NoiseChisel}@footnote{If further processing is done, for example
+the Kron or Petrosian radii are calculated, then the detected area is
+not sufficient and the total area that was within the respective
+radius must be used.}. The @emph{flux} of an object is defined as its
+brightness divided by its detected area (for example in @mymath{cm^2}
+on the detector). Knowing the flux (@mymath{f}) and distance to the
+object (@mymath{r}), we can calculate its @emph{luminosity}:
+@mymath{L=4{\pi}r^2f}. Therefore, flux and luminosity are intrinsic
+properties of the object, while brightness depends on our detecting
+tools (hardware and software). Here we will not be discussing
+luminosity, but brightness. However, since luminosity is the
+astrophysically interesting quantity, we also defined it here to avoid
+possible confusion between these two terms because they both have the
+same units.
 
 @cindex Solid Angle
 For one detector, the pixels all have the same area. So finding the
